--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,7 +43,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
 
 # Play Modules
-play.modules.enabled += "uk.gov.hmrc.userallowlist.config.Module"
+play.modules.enabled += "config.Module"
 
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
@@ -63,22 +63,6 @@ play.i18n.langs = ["en"]
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 play.http.router = prod.Routes
 
-# Controller
-# ~~~~~
-# By default all controllers will have authorisation, logging and
-# auditing (transaction monitoring) enabled.
-# The below controllers are the default exceptions to this rule.
-
-controllers {
-  # 300 is the default, you may need to change this according to your needs
-  confidenceLevel = 300
-
-  uk.gov.hmrc.userallowlist.controllers.MicroserviceHelloWorldController = {
-    needsAuth = false
-    needsLogging = false
-    needsAuditing = false
-  }
-}
 
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
@@ -124,4 +108,3 @@ microservice {
     }
   }
 }
-
