--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,6 +46,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 play.modules.enabled += "config.Module"
 
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
+play.modules.enabled += "uk.gov.hmrc.internalauth.client.modules.InternalAuthModule"
 
 # The application languages
 # ~~~~~
@@ -108,6 +109,11 @@ microservice {
     auth {
       host = localhost
       port = 8500
+    }
+
+    internal-auth {
+      host = localhost
+      port = 8470
     }
   }
 }
